Gradle 9.4.0, Java 25, 1.21.11, ...